2009-03-31  Dean Jackson  <dino@apple.com>

Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=24955

        Spacebar didn't play/pause in standalone MediaDocument

        * loader/MediaDocument.cpp:
        (WebCore::MediaDocument::defaultEventHandler):


Canonical link: https://commits.webkit.org/34189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42134 268f45cc-cd09-0410-ab3c-d52691b4dbfc